# CameraX

./: .gitattributes  .gitignore  README.md  work.ctrl3d.camerax.csproj.DotSettings
.utmp/RelWithDebInfo/5i3a5n34/: hash_key.txt
.utmp/RelWithDebInfo/5i3a5n34/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  additional_project_files.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  build_file_index.txt  cmake_install.cmake  compile_commands.json  metadata_generation_command.txt  prefab_config.json  symbol_folder_index.txt
.utmp/RelWithDebInfo/5i3a5n34/arm64-v8a/GameActivity/: cmake_install.cmake
Assets/: CameraTestRunner.cs  HollowOverlayImage.cs  PhotoShoot.cs
Assets/CameraX/: CHANGELOG.md  LICENSE.md  package.json
Assets/CameraX/Editor/: NativeCameraPluginDependencies.xml  work.ctrl3d.camerax.Editor.asmdef
Assets/CameraX/Plugins/Android/: NativeCameraPlugin-release.aar
Assets/CameraX/Runtime/: AndroidNativeCameraBridge.cs  NativeCameraController.cs  work.ctrl3d.camerax.asmdef
Assets/CameraX/Runtime/Resources/CameraX/: UI-Camera-sRGB.shader
Assets/Plugins/Android/: baseProjectTemplate.gradle  mainTemplate.gradle  settingsTemplate.gradle
Assets/Scenes/: SampleScene.unity
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
NativePlugin/: CMakeLists.txt  KOTLIN_AI_BRIEF.md  build.bat  oes_renderer.c
ProjectSettings/: AndroidResolverDependencies.xml  GraphicsSettings.asset  GvhProjectSettings.xml  ProjectSettings.asset
(+17 files in other folders)
